# casey-old

./: Cargo.toml  TODO.md  sample-text.txt
src/: args.rs  case.rs  command.rs  convert.rs  detect.rs  lib.rs  main.rs  normalize.rs  text_detect.rs  token.rs  validation.rs
